Added TDWFB plugins

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -14,9 +14,20 @@
             For more info on The Day We Fight Back,  <a href="https://thedaywefightback.org/?r=fftf">Click Here</a>
         </h3>
 
-        <a class="montserrat" style="font-size: 14px; text-align: center; width: 100%; display: block;" href="http://wordpress.org/plugins/tdwfb/">
-            Wordpress user? Use this plugin!
+        <h3 class="montserrat" style="font-size: 14px;">
+        TDWFB Plugins: 
+        <a href="https://www.cloudflare.com/apps/the_day_we_fight_back">
+        Cloudflare
         </a>
+        ,
+        <a href="https://github.com/mrjameshamilton/thedaywefightback.drupal">
+        Drupal
+        </a>
+        ,
+        <a href="http://wordpress.org/plugins/tdwfb/">
+        Wordpress
+        </a>
+        </h3>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
