--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -4,29 +4,15 @@
 
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
-        <h2 class="montserrat">We are joining over 4,000 other websites to protest mass surveillance on Feb 11: The Day We Fight Back</h2>
+        <br>
+        <h2 class="montserrat">Reset the Net</h2>
 
         <h3 class="montserrat">
-            To celebrate our epic defeat of the SOPA two years ago, and to honor and remember Internet activist Aaron Swartz, we're partnering with thousands of other sites on The Day We Fight Back to stop mass surveillance.
+            We can't stop targeted attacks, but we *can* stop mass surveillance, by building proven security into the everyday Internet.
         </h3>
 
         <h3 class="montserrat">
-            For more info on The Day We Fight Back,  <a href="https://thedaywefightback.org/?r=fftf">Click Here</a>
-        </h3>
-
-        <h3 class="montserrat" style="font-size: 14px;">
-        TDWFB Plugins: 
-        <a href="https://www.cloudflare.com/apps/the_day_we_fight_back">
-        Cloudflare
-        </a>
-        ,
-        <a href="https://github.com/mrjameshamilton/thedaywefightback.drupal">
-        Drupal
-        </a>
-        ,
-        <a href="http://wordpress.org/plugins/tdwfb/">
-        Wordpress
-        </a>
+            Interested in our Wordpress Plugin?  <a href="https://wordpress.org/plugins/cat-signal/">Click Here</a>
         </h3>
         
         <div class="indent dark large">
@@ -66,7 +52,7 @@
                 <div class="small">
                     <span class="inputs">
                         <input type="radio" name="campaign" id="single" value="" />
-                        <label for="single" class="montserrat">Just for <a href="https://thedaywefightback.org/?r=fftf">The Day We Fight Back</a></label>
+                        <label for="single" class="montserrat">Just for <a href="https://www.resetthenet.org/">Reset the Net</a></label>
                     </span>
                     <p class="description">Code is live as soon as you add it, but you'll have to update it for each new campaign.</p>
                     <fieldset style="display: none;">
