Set modal as default

--- a/internetdefense/templates/include.html
+++ b/internetdefense/templates/include.html
@@ -1,9 +1,9 @@
     window._idl = {};
-    _idl.variant = "banner";{campaign}
+    _idl.variant = "modal";{campaign}
     (function() {
         var idl = document.createElement('script');
         idl.type = 'text/javascript';
         idl.async = true;
-        idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + '{{ INCLUDE_URL }}?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+        idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + '{{ INCLUDE_URL }}?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'modal');
         document.getElementsByTagName('body')[0].appendChild(idl);
     })();
