Added WP.com widget link

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -12,7 +12,7 @@
         </h3>
 
         <h3 class="montserrat">
-            Interested in our Wordpress Plugin?  <a href="https://wordpress.org/plugins/cat-signal/">Click Here</a>
+            Interested in using this on your WordPress.com page? Use their <a href="http://en.support.wordpress.com/widgets/internet-defense-league-widget/">widget here</a>. Or get <a href="https://wordpress.org/plugins/cat-signal/">Wordpress.org plugin here</a>.
         </h3>
         
         <div class="indent dark large">
