added https badges

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -92,29 +92,29 @@
 
 						      <div class="blue_pod"><p>Super Badge</p><img style="margin-left: -45px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/super_badge_example.png" alt="Footer Placement" />
 						      	<p class="caption"><img style="margin-right: 7px; margin-bottom: -5px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/arrow_down.png" alt="arrow" />Select and copy this code</p>
-						      	<textarea class="code" type="text" name="code" /><a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/super_badge.png" alt="Member of The Internet Defense League" /></a></textarea>      
+						      	<textarea class="code" type="text" name="code" /><a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/super_badge.png" alt="Member of The Internet Defense League" /></a></textarea>      
 						      </div>
 
 						      <div class="blue_pod"><p>Shield Badge</p><img style="margin-left: 14px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/shield_badge_example.png" alt="Footer Placement" />
 						      	<p class="caption"><img style="margin-right: 7px; margin-bottom: -5px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/arrow_down.png" alt="arrow" />Select and copy this code</p>
-						      	<textarea class="code" type="text" name="code" /><a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a></textarea>         
+						      	<textarea class="code" type="text" name="code" /><a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a></textarea>         
 						      </div>
 
 						      <div class="blue_pod"><p>Footer Badge</p><img style="margin-left: 14px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/footer_browser.png" alt="Footer Placement" />
 								<p class="caption"><img style="margin-right: 7px; margin-bottom: -5px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/arrow_down.png" alt="arrow" />Select and copy this code</p>
-<textarea class="code" type="text" name="code" /><a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League" /></a></textarea>
+<textarea class="code" type="text" name="code" /><a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League" /></a></textarea>
 </div>
 
 						      <div class="blue_pod"><p>Side Bar Badge</p><img style="margin-left: -45px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/sidebar_browser.png" alt="Side Bar Badge" />
 						      <p class="caption"><img style="margin-right: 7px; margin-bottom: -5px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/arrow_down.png" alt="arrow" />Select and copy this code</p>
-<textarea class="code" type="text" name="code" /><a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/side_bar_badge.png" alt="Member of The Internet Defense League" /></a></textarea>						      </div>
+<textarea class="code" type="text" name="code" /><a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/side_bar_badge.png" alt="Member of The Internet Defense League" /></a></textarea>						      </div>
 
 						      <div class="blue_pod"><p>Ribbon (Left Side)</p><img style="margin-left: 14px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/leftside_browser.png" alt="Ribbon (Left Side)" />
 						      <p class="caption"><img style="margin-right: 7px; margin-bottom: -5px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/arrow_down.png" alt="arrow" />Select and copy this code</p>
-<textarea class="code" type="text" name="code" /><a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/banner_left.png" alt="Member of The Internet Defense League" /></a></textarea>						      </div>
+<textarea class="code" type="text" name="code" /><a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/banner_left.png" alt="Member of The Internet Defense League" /></a></textarea>						      </div>
 
 						      <div class="blue_pod"><p>Ribbon (Right Side)</p><img style="margin-left: -45px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/rightside_browser.png" alt="Ribbon (Right Side)" /><p class="caption"><img style="margin-right: 7px; margin-bottom: -5px;" src="{{ SECURE_STATIC_URL }}img/idl_resources/arrow_down.png" alt="arrow" />Select and copy this code</p>
-<textarea class="code" type="text" name="code" /><a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/banner_right.png" alt="Member of The Internet Defense League" /></a></textarea>						      </div>
+<textarea class="code" type="text" name="code" /><a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/banner_right.png" alt="Member of The Internet Defense League" /></a></textarea>						      </div>
 						</div></div>
 
     </div>
