Added more plugins

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -12,9 +12,18 @@
         </h3>
 
         <h3 class="montserrat">
-            Interested in using this on your WordPress.com page? Use their <a href="http://en.support.wordpress.com/widgets/internet-defense-league-widget/">widget here</a>.
+            If you don't like copying and pasting code, check out these plugins:
             <br>
-            Or get Wordpress.org <a href="https://wordpress.org/plugins/cat-signal/">plugin here</a>.
+            <a href="https://github.com/thomasdavis/resetthenet-cloudflare-app">Cloudflare</a>
+            <br>
+            <a href="http://en.support.wordpress.com/widgets/internet-defense-league-widget/">Wordpress.com</a>
+            <br>
+            <a href="https://wordpress.org/plugins/cat-signal/">Self-hosted Wordpress</a>
+            <br>
+            and
+            <a href="joomla version: https://github.com/pdxfixit/plg_catsignal">Joomla</a>
+            .
+            
         </h3>
         
         <div class="indent dark large">
