--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -12,7 +12,7 @@
         </h3>
 
         <h3 class="montserrat">
-            If you don't like copying and pasting code, check out these plugins:
+            Want to help spread the word, but don't know HTML? That's fine! Check out these plugins:
             <br>
             <a href="https://github.com/thomasdavis/resetthenet-cloudflare-app">Cloudflare</a>
             <br>
@@ -20,9 +20,7 @@
             <br>
             <a href="https://wordpress.org/plugins/cat-signal/">Self-hosted Wordpress</a>
             <br>
-            and
             <a href="joomla version: https://github.com/pdxfixit/plg_catsignal">Joomla</a>
-            .
             
         </h3>
         
